Dodanie przeglądu kart na głównym ekranie, dodanie nowych zapytań do .Application

--- a/PaycardEditor.WinForms/appsettings.json
+++ b/PaycardEditor.WinForms/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "PaycardCS": "Server=localhost;Database=PaycardDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+    "PaycardCS": "Server=LAPTOP-G9F6P9TK\\SQLEXPRESS;Database=PaycardDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
   }
 }
