--- a/PaycardEditor.WinForms/PaycardEditor.WinForms.csproj
+++ b/PaycardEditor.WinForms/PaycardEditor.WinForms.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
   </ItemGroup>
 
@@ -16,6 +20,12 @@
     <ProjectReference Include="..\PaycardEditor.Application\PaycardEditor.Applications.csproj" />
     <ProjectReference Include="..\PaycardEditor.Domain\PaycardEditor.Domain.csproj" />
     <ProjectReference Include="..\PaycardEditor.Infrastructure\PaycardEditor.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -31,12 +41,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
