--- a/PaycardEditor.WinForms/appsettings.json
+++ b/PaycardEditor.WinForms/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
-    "PaycardCS": "Server=LAPTOP-G9F6P9TK\\SQLEXPRESS;Database=PaycardDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
-  }
+  "AppSettings": {
+    "PaycardCS": "Server=localhost;Database=PaycardDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+  } 
 }
